fix text alignation on select

--- a/src/resources/public/css/custom.css
+++ b/src/resources/public/css/custom.css
@@ -33,3 +33,7 @@
     z-index: 999;
     width: 100%;
 }
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    line-height: 42px;
+}
